@@ -31,9 +31,14 @@ import org.scalatest.OptionValues._
 @RunWith(classOf[JUnitRunner])
 class BecomeTest extends FunSuite with ShouldMatchers with SomeHelp {
 
-
   test("become tests") {
     import util.Properties.{userName=>user}
+    info("For this test to success, you must allow current user to be able ")
+    info("  to log on localhost without password authentication")
+    info("(use ssh-keygen to generate your ssh keys, if not already done)")
+    info("cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys")
+    info("ssh localhost     # Should not ask you a password")
+
     val opts = SSHOptions("127.0.0.1", username=user, timeout=10000)
     SSH.shell(opts) {sh =>
       sh.become("test", Some("testtest")) should equal(true)
